fix(batch-app): 수집 컨텐츠 수정 배치 조인 제거